--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
 <head>
-	<title>Guest List</title>
+	<title id="title">Guest List</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="main.js"></script>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 <center>
-<h3 style="margin-top: 20px; margin-bottom: 20px; ">
+<h2 style="margin-top: 20px; margin-bottom: 20px; " id="title2">
 	Guest List
-</h3>
+</h2>
+
 
 <div id="rows">
 
-<input type="text" placeholder="Enter name" id="name1">
-<button onclick="submit()" id="submit_button">Submit </button>
+<input type="text" placeholder="Enter Name" id="name1">
+<button onclick="submit()" id="submit_button">Submit Name</button>
 <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 	
 <hr>
@@ -22,21 +25,22 @@
 <div id="display_name">
 </div>
 <hr>
-	<div id="Show1"><h3 id="hd1">Guest List</h3>
-		<button onclick="show()" id="show">Show</button>
+	<div id="Show1"><h2 id="hd1">Guest List</h2>
+		<button onclick="show()" id="show">Show Names</button>
+		<hr>
 		<p id="p1"></p></div>
 	
 <hr>
 <button onclick="sorting()" id="sort_button">
-	Sorted List
+	Sort List
 </button>
 
 
 	<div id="sorted"></div>
     </div>
 	<hr>
-	<input type="text" placeholder="Search name" id="s1">&nbsp;<h3>You have to spell the name excatly how you spelled it before for it to work!</h3>
-	<button onclick="searching()" id="srch">Search</button>
+	<input type="text" placeholder="Search Name" id="s1">&nbsp;<h3>You have to spell the name exactly how you spelled it before for it to work!</h3>
+	<button onclick="searching()" id="srch">Search Name</button>
 	<p id="p2"></p>
     
 </center>
