--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 	<hr>
 	<input type="text" placeholder="Search Name" id="s1">&nbsp;<h3>You have to spell the name exactly how you spelled it before for it to work!</h3>
 	<button onclick="searching()" id="srch">Search Name</button>
-	<p id="p2"></p>
+	<h3 id="p2" style="color:teal;
+	font-family: 'Grenze Gotisch', cursive;
+	font-size: 20px;"></h3>
     
 </center>
 		
